tests/snapshots/errors__errors@component_type_mismatch.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: Type of binding does not match... (1/2)
  --> examples/component_type_mismatch.rs:36:28
   |
36 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: static bindings do not wrap their type T and just return a T

error: ...type specified here (2/2)
  --> examples/component_type_mismatch.rs:40:24
   |
40 |     fn maker(&self) -> Rc<RefCell<CoffeeMaker<H, P>>>;
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `DirkCoffeeShop` in the current scope
  --> examples/component_type_mismatch.rs:20:39
   |
20 |       let coffee_shop = DirkCoffeeShop::builder().build();
   |                                         ^^^^^^^ function or associated item not found in `DirkCoffeeShop`
...
31 | / #[component(
32 | |     [
33 | |         logger: singleton_bind(CoffeeLogger),
34 | |         heater: scoped_bind(ElectricHeater) [logger],
...  |
37 | |     ]
38 | | )]
   | |__- function or associated item `builder` not found for this struct

For more information about this error, try `rustc --explain E0599`.
error: could not compile `errors` (example "component_type_mismatch") due to 3 previous errors
